--- a/src/views/home.css
+++ b/src/views/home.css
@@ -8,16 +8,13 @@
 }
 .home-header {
   width: 100%;
-  height: 417px;
+  border: 2px dashed rgba(120, 120, 120, 0.4);
+  height: 397px;
   display: flex;
   align-self: center;
   align-items: center;
   background-size: cover;
   justify-content: center;
-  background-image: url("/hottubandpool-1500w.jpg");
-}
-.home-image {
-  width: 200px;
-  padding: var(--dl-space-space-twounits);
-  object-fit: cover;
+  background-image: url("/frontcircleanddoor-1500w.jpg");
+  background-position: center;
 }
